# vidypy

./: .gitignore  Dockerfile  pyproject.toml
vidypy/: main.py
