[tool.poetry]
name = "vidypy"
version = "0.1.0"
description = ""
authors = ["Iván Salazar <ivangio.salazar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.3"
yt-dlp = "^2024.3.10"
validators = "^0.22.0"


[tool.poetry.group.dev.dependencies]
autoimport = "^1.3.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
