[tool.poetry]
name = "vidypy"
version = "0.2.0"
description = ""
authors = ["Iván Salazar <ivangio.salazar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.1.1"
yt-dlp = "^2025.1.26"
validators = "^0.34.0"


[tool.poetry.group.dev.dependencies]
autoimport = "^1.3.3"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
